test/functions/resolution/errors/testBadCallCandidates.3-all.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:82: error: unresolved call 'foo(42)'
testBadCallCandidates.chpl:59: note: this candidate did not match: foo(x: C)
testBadCallCandidates.chpl:82: note: because actual argument #1 with type 'int(64)'
testBadCallCandidates.chpl:59: note: is passed to formal 'x: C'
testBadCallCandidates.chpl:82: note: other candidates are:
testBadCallCandidates.chpl:62: note:   foo(x: D)
testBadCallCandidates.chpl:5: note:   C.foo(x: string)
testBadCallCandidates.chpl:33: note:   D.foo(x: C)
